<resources>
    <string name="app_name">MyTest</string>
    <string name="action_settings">Settings</string>
    <string name="btn_insert">插入</string>
    <string name="btn_delete">删除</string>
    <string name="btn_update">修改</string>
    <string name="btn_query">查询</string>
    <string name="insert_text_name">姓名</string>
    <string name="insert_text_age">年龄</string>
    <string name="insert_text_sex">性别</string>
    <string name="insert_confirm">确认插入</string>
    <string name="insert_cancel">取消插入</string>
    <string name="delete_text_id">ID</string>
    <string name="delete_confirm">确定删除</string>
    <string name="delete_cancel">取消删除</string>
    <string name="update_text_id">ID</string>
    <string name="update_text_name">姓名</string>
    <string name="update_text_age">年龄</string>
    <string name="update_text_sex">性别</string>
    <string name="update_confirm">确认更新</string>
    <string name="update_cancel">取消更新</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="error_network">Not network</string>
    <string name="hint_bluetooth_no_connect">Connect bluetooth device was failure,please make sure that it was boot</string>
    <string name="hint_bluetooth_no_found">Search bluetooth signal was failure,please make sure that device was boot</string>
    <string name="hint_check_new_data">Checking new data,please wait!</string>
    <string name="hint_company">Company Id</string>
    <string name="hint_connect">connect success</string>
    <string name="hint_connect_cut">Connection was cut , try to recovery it</string>
    <string name="hint_data_not_change">All data were save</string>
    <string name="hint_drop_data">There are data was changed but not save,do you want drop them?</string>
    <string name="hint_error_device_not_found">The bluetooth device with name %s is not found,are you try again?</string>
    <string name="hint_error_no_device">You have not config bluetooth device.</string>
    <string name="hint_error_no_stack">Stock list is empty,please download</string>
    <string name="hint_init">initialization</string>
    <string name="hint_input">Please input</string>
    <string name="hint_load_data">Loading data</string>
    <string name="hint_login_fail">Login failure</string>
    <string name="hint_name">User Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_query_data">Querying data</string>
    <string name="hint_save">Finish save</string>
    <string name="hint_saving">Saving data...</string>
    <string name="hint_scan_local">Inventory With Location</string>
    <string name="hint_scanning">Scanning</string>
    <string name="hint_stop_success">Stop successfully</string>
    <string name="login">Confirm</string>
    <string name="login_error_account">Account does not exist</string>
    <string name="login_error_pwd">Password incorrect</string>
    <string name="login_success">Login successfully</string>
    <string name="menu_bluetooth">Bluetooth</string>
    <string name="menu_download">Download</string>
    <string name="menu_history">User History</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_ss">Stock Take</string>
    <string name="menu_upload">Upload</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="strNetworkTipsCancelBtn">取消</string>
    <string name="strNetworkTipsConfirmBtn">继续下载</string>
    <string name="strNetworkTipsMessage">你已切换到移动网络，是否继续当前下载？</string>
    <string name="strNetworkTipsTitle">网络提示</string>
    <string name="strNotificationClickToContinue">继续下载</string>
    <string name="strNotificationClickToInstall">点击安装</string>
    <string name="strNotificationClickToRetry">点击重试</string>
    <string name="strNotificationClickToView">点击查看</string>
    <string name="strNotificationDownloadError">下载失败</string>
    <string name="strNotificationDownloadSucc">下载完成</string>
    <string name="strNotificationDownloading">正在下载</string>
    <string name="strNotificationHaveNewVersion">有新版本</string>
    <string name="strToastCheckUpgradeError">检查新版本失败，请稍后重试</string>
    <string name="strToastCheckingUpgrade">正在检查，请稍候...</string>
    <string name="strToastYourAreTheLatestVersion">你已经是最新版了</string>
    <string name="strUpgradeDialogCancelBtn">下次再说</string>
    <string name="strUpgradeDialogContinueBtn">继续</string>
    <string name="strUpgradeDialogFeatureLabel">更新说明</string>
    <string name="strUpgradeDialogFileSizeLabel">包大小</string>
    <string name="strUpgradeDialogInstallBtn">安装</string>
    <string name="strUpgradeDialogRetryBtn">重试</string>
    <string name="strUpgradeDialogUpdateTimeLabel">更新时间</string>
    <string name="strUpgradeDialogUpgradeBtn">立即更新</string>
    <string name="strUpgradeDialogVersionLabel">版本</string>
    <string name="title_login">資產管理系統</string>
    <string name="title_sub_login">Asset Management System</string>
    <string name="wait_dialog">Signing in, please wait</string>
</resources>
